# crush-forensics

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  TODO.md  pyproject.toml
.github/workflows/: build.yml  ci.yml  nightly.yml
crush/: __init__.py  __main__.py
crush/admin/: format_knowledge_base.md  multi_log_studio.md  parsers.md
crush/core/: encodings.py  format_db.py  formatters.py  log_db.py  magic.py  paste_decode.py  registry.py  session.py  sqlite_wal.py  ts_decode.py  vfs.py  viewer_registry.py  work_priority.py
crush/data/: __init__.py  build_formats_db.py  formats.db
crush/docs/: developer-guide.md  filetype_detection.md  format-support.md  handbook.md
crush/parsers/: __init__.py  abx_decoder.py  abx_parser.py  base.py  exif_reader.py  hex_fallback.py  image_parser.py  json_parser.py  leveldb_parser.py  log_parser.py  media_parser.py  multi_log_parser.py  pdf_parser.py  plist_parser.py  proto_interp.py  proto_wire.py  protobuf_parser.py  realm_parser.py  segb_parser.py  sqlite_parser.py  unified_log_parser.py  xml_parser.py
crush/tests/: conftest.py  test_forensic.py  test_format_db.py  test_formatters.py  test_log_parser.py  test_magic.py  test_media_parser.py  test_multi_log_parser.py  test_parsers.py  test_paste_decode.py  test_ts_decode.py  test_unified_log_parser.py  test_value_inspector.py  test_vfs.py
crush/ui/: __init__.py  about_dialog.py  format_info_dialog.py  format_reference.py  fs_panel.py  loading_dialog.py  main_window.py  paste_decode_dialog.py  props_panel.py  search_panel.py  viewer_factory.py
crush/viewers/: __init__.py  abx_viewer.py  blob_inspector.py  hex_viewer.py  image_viewer.py  leveldb_viewer.py  log_viewer.py  media_viewer.py  multi_log_viewer.py  realm_viewer.py  (+5 more)
scripts/: benchmark_unified_log.py  download_unifiedlog_binaries.py  make_icons.py
(+6 files in other folders)
