[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crush"
version = "0.12.1"
description = "Crush — Digital Forensic Analysis Workbench"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Marco Neumann (kalink0)" }]
keywords = ["forensics", "dfir", "ios", "android", "artifact", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "PySide6>=6.7",
    "biplist>=1.0.3",
    "lxml>=5.0",
    "construct>=2.10",
    "python-magic>=0.4.27",
    "filetype>=1.2.0",
    "pypdf>=4.0",
    "protobuf>=4.25",
    "grpcio-tools>=1.62",
    "Pillow>=10.0",
    "pillow-heif>=0.13",
    "pillow-jxl-plugin>=1.3",
    "av>=12.0",
    "lzfse>=0.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-html>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "lxml-stubs>=0.5.1",
]

[project.scripts]
crush = "crush.__main__:main"

[project.urls]
Homepage = "https://github.com/kalink0/crush-forensics"
Issues = "https://github.com/kalink0/crush-forensics/issues"

[tool.setuptools.packages.find]
include = ["crush*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
exclude = [
    "build/.*",
    "crush/third_party/.*",
]

[[tool.mypy.overrides]]
module = [
    "crush.third_party.*",
    "crush.ui.*",
    "crush.viewers.*",
    "crush.tests.*",
]
ignore_errors = true
